other/rook-ceph/apps/rook-ceph-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard-ingress
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: server.example.com
    http:
      paths:
      - path: /ceph-dashboard
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
